--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  width: 100vw;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.7;
+}
+
+h1 {
+  margin: 50px 0 30px 0;
+  font-weight: 100;
+  font-size: 5rem;
+  opacity: 0.4;
+}
+
+ul {
+  margin-top: 30px;
+  min-width: 50%;
+}
+
+li {
+  list-style-type: none;
+  padding: 0 20px;
+  margin: 20px 0;
+  font-size: 2rem;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+input {
+  padding: 10px;
+  font-size: 2rem;
+  outline: 0;
+  border: 0;
+  border-bottom: 3px solid rgba(65, 58, 58, 0.561);
+}
+
+button {
+  padding: 10px 40px;
+  font-size: xx-large;
+  margin-left: 15px;
+  background-color: rgba(201, 96, 96, 0.322);
+  border: 0;
+  cursor: pointer;
 }
